--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,14 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation ('com.google.firebase:firebase-database')
+    implementation ('com.google.firebase:firebase-storage')
     implementation('com.google.firebase:firebase-auth')
+    implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment:2.4.1'
+    implementation 'androidx.navigation:navigation-ui:2.4.1'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
