--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:name=".WheelsApplication"
@@ -18,24 +19,21 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
-        <activity
-            android:name=".activities.auth.LoginFragment"
-            android:exported="true">
 
-        </activity>
 
-        <activity
-            android:name=".activities.auth.ClientRegistrationFragment"
-            android:exported="true"/>
+     <activity
+         android:name=".activities.AuthActivity"
+         android:exported="true">
+         <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
+             <category android:name="android.intent.category.LAUNCHER" />
+         </intent-filter>
+     </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
