--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
 
      <activity
-         android:name=".activities.AuthActivity"
+         android:name=".auth.activities.AuthActivity"
          android:exported="true">
          <intent-filter>
              <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
          </intent-filter>
      </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".main.activities.MainActivity"
             android:exported="true">
 
         </activity>
